@@ -1,3 +1,6 @@
+2012-03-24 Harri Pitkänen <hatapitk@iki.fi>
+	* Suggest some two character deletions
+
 2012-03-21 Harri Pitkänen <hatapitk@iki.fi>
 	* Generate more spelling suggestions
 
